--- a/package.json
+++ b/package.json
@@ -25,11 +25,10 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "update": "npm install -g npm-check-updates",
-    "update pt.2": "ncu -u",
-    "update pt.3": "npm update",
     "install": "npm install",
-    "launch": "yarn start"
+    "launch": "npm start", 
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
