--- a/package.json
+++ b/package.json
@@ -22,13 +22,14 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "install": "npm install",
-    "launch": "npm start", 
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "launch": "npm start"
+ 
   },
   "eslintConfig": {
     "extends": [
